# Octurn

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  operators.hpp  types.hpp
Octurn/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  data.txt  technicalIndicators.cpp
Octurn/TA/: taLib.cpp  taLib.hpp
Octurn/config/: cfgTemp.cpp  cfgTemp.hpp  configStruc.hpp
Octurn/interpreter/: Interpretator.cpp  Interpretor.hpp
Octurn/lexer/: Token.hpp
Octurn/log/: logHandler.hpp
Octurn/mappers/: maps.cpp  maps.hpp
Octurn/my_api/rabbitQueue/: main.cpp  publishRabbit.h  worker.h
Octurn/my_api/test/: CMakeLists.txt
Octurn/node/: Node.cpp  Node.hpp
Octurn/src/polygon/: polygonClient.hpp
Octurn/types/: types.hpp
Octurn/utils/: Utils.cpp  Utils.hpp
TA/: taLib.cpp  taLib.hpp
ZoethraDB/: package-lock.json  package.json
ZoethraDB/relay/: serv.js
ZoethraDB/web/: client.js  index.html
account/: account.cpp  account.hpp
api/: CMakeLists.txt
api/controllers/: BacktestCtrl.cpp
api/rabbitQueue/: worker.cpp
api/test/: CMakeLists.txt
backtester/: backtesterCore.cpp  backtesterCore.hpp
config/: cfgTemp.cpp  cfgTemp.hpp  config.cpp  config.hpp  configRules.cpp  configRules.hpp  configStruc.hpp  configTypes.hpp  configUtilities.cpp  configUtilities.hpp  configValidator.cpp  configValidator.hpp  slippageTable.cpp  slippageTable.hpp
engine/: octurn.cpp  octurn.hpp
execution/: executionEngine.cpp  executionEngine.hpp
interpreter/: Interpretator.cpp  Interpreter.cpp  Interpreter.hpp  Interpretor.hpp
lexer/: Lexer.cpp  Lexer.hpp  operators.hpp
log/: logHandler.cpp
mappers/: maps.cpp  maps.hpp
marketDataView/: DataLayer.cpp  DataLayer.hpp  MarketDataView.cpp  MarketDataView.hpp
marketTypes/: marketTypes.hpp
my_api/: CMakeLists.txt
my_api/controllers/: BacktestCtrl.h
my_api/rabbitQueue/: CMakeLists.txt  apiConnection.cpp  apiConnection.h  publishRabbit.cpp  worker.cpp
node/: Node.cpp  Node.hpp
parser/: Parser.cpp  Parser.hpp
src/data/: pending.hpp
src/data/polygon/: polygon_fetch.d.ts  polygon_fetch.js  polygon_wasm_bridge.cpp  polygon_wasm_bridge.hpp
src/polygon/: polygonClient.cpp  polygonDataFeed.cpp  polygonDataFeed.hpp
ta/: taLib.cpp
trade/: trade.cpp  trade.hpp
utils/: Utils.cpp  Utils.hpp
wasm/: octurn_api.cpp  octurn_api.hpp
web-app/backtest-ui/: index.html  package-lock.json  package.json
web-app/backtest-ui/public/wasm/: octurn_api.js  octurn_api.wasm
web-app/backtest-ui/src/: App.css  App.tsx  Docs.tsx  Landing.tsx  Octurn.tsx  backtester.tsx  emscripten.d.ts  features.tsx  latestBackests.tsx  pageType.tsx  titles.tsx
web-app/backtest-ui/src/types/: polygon_fetch.d.ts
